--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri = mongodb+srv://kirankaruna17:kiran12345@cluster0.dtjjejn.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri = mongodb+srv://kirankaruna17:**********@cluster0.dtjjejn.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database = TodoDB
